Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-13421

Deadlock on session switch

XMLWordPrintable

      • Open a session with a project.
      • While the project is parsing, switch session -> deadlock.

      Trace attached.

        1. crash-win.txt
          95 kB
          Orgad Shaneh
        2. deadlock.txt
          28 kB
          Orgad Shaneh
        3. deadlock2.txt
          55 kB
          Orgad Shaneh
        For Gerrit Dashboard: QTCREATORBUG-13421
        # Subject Branch Project Status CR V

            dt Daniel Teske
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes